# pong

./: .gitignore  CMakeLists.txt  README.md  build.sh
resources/: .settings
resources/aseprite/: ball.aseprite  paddle.aseprite
resources/fonts/pixel-coleco-font/: info.txt
src/: CC.hpp  CCAudio.cpp  CCAudio.hpp  CCEvent.cpp  CCEvent.hpp  CCFont.cpp  CCFont.hpp  CCKeyboard.cpp  CCKeyboard.hpp  CCLog.hpp  CCRender.cpp  CCRender.hpp  CCScene.cpp  CCScene.hpp  CCSceneManager.cpp  CCSceneManager.hpp  CCText.cpp  CCText.hpp  CCTexture.cpp  CCTexture.hpp  CCTime.cpp  CCTime.hpp  CCWindow.cpp  CCWindow.hpp
src/Game/: Game.hpp  Globals.hpp  MainMenu.hpp  Settings.hpp  main.cpp
toolchains/: toolchain-x86_64-w64-mingw32.cmake
